--- a/pom.xml
+++ b/pom.xml
@@ -23,28 +23,29 @@
     <jacoco.unit-tests.limit.class-complexity>20</jacoco.unit-tests.limit.class-complexity>
     <jacoco.unit-tests.limit.method-complexity>5</jacoco.unit-tests.limit.method-complexity>
   </properties>
-  <repository>
-    <id>jitpack-repo</id>
-    <url>https://jitpack.io/</url>
-  </repository>
+  <repositories>
+    <repository>
+      <id>jitpack-repo</id>
+      <url>https://jitpack.io/</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
-      <groupId>com.github.retrooper</groupId>
-      <artifactId>packetevents</artifactId>
-      <version>master-SNAPSHOT</version>
+      <groupId>io.github.danielthedev</groupId>
+      <artifactId>npc</artifactId>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
+      <artifactId>spigot</artifactId>
+      <classifier>remapped-mojang</classifier>
       <version>1.17.1-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>net.citizensnpcs</groupId>
-      <artifactId>citizens-main</artifactId>
-      <version>2.0.28-SNAPSHOT</version>
-      <type>jar</type>
-      <scope>provided</scope>
+      <groupId>com.github.retrooper.packetevents</groupId>
+      <artifactId>spigot</artifactId>
+      <version>2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -58,6 +59,7 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <artifactId>packetevents</artifactId>
   </dependencies>
   <build>
     <plugins>
