uh, forgot to do this for a while.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,6 +10,8 @@ commands:
     usage: /kbclear
   kbloadout:
     usage: /kbloadout
+  kbhunt:
+    usage: /kbhunt <playername>
 
 # load: POSTWORLD
 # depend:
