--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
         <version>3.2.0</version>
       </plugin>
 
-      <plugin>
+      <!-- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.2.1</version>
@@ -157,7 +157,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin> -->
 
       <!-- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
